--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -86,6 +86,10 @@
               >¿Olvidaste tu contraseña?</a
             >
           </p>
+          <p>
+            ¿Eres administrador?
+            <a href="{% url 'admin_dashboard:admin_login' %}"> Accede aquí</a>
+          </p>
         </div>
       </div>
       <div class="back-link">
@@ -105,6 +109,6 @@
       </div>
     </main>
 
-    <script src="{% static 'users/js/main.js' %}"></script>
+    <script src="{% static 'users/js/login.js' %}"></script>
   </body>
 </html>
